--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/lunexa.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"/>
-    
 
+    <link rel="icon" href="%PUBLIC_URL%/lunexa.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- 🔍 SEO PRINCIPAL -->
+    <title>Lunexa | Desarrollo de Software, Soluciones Web y Sistemas Personalizados</title>
     <meta
       name="description"
-       content="Lunexa: desarrollo de software, soluciones web y sistemas personalizados."
+      content="Lunexa es una empresa de desarrollo de software dedicada a crear soluciones digitales modernas, eficientes y personalizadas. Desarrollamos sitios web, sistemas empresariales y automatizaciones con Python, Django, React y más."
     />
+    <meta
+      name="keywords"
+      content="Lunexa, desarrollo de software, desarrollo web, programación, sistemas a medida, páginas web, Django, React, Python, desarrollador full stack, aplicaciones web, automatización, inteligencia artificial"
+    />
+    <meta name="author" content="Lunexa Software" />
+    <link rel="canonical" href="https://lunexa.vercel.app/" />
+
+    <!-- 🧩 OPEN GRAPH (para compartir en redes sociales) -->
+    <meta property="og:title" content="Lunexa | Desarrollo de Software y Soluciones Digitales" />
+    <meta
+      property="og:description"
+      content="Creamos soluciones tecnológicas personalizadas: sistemas web, páginas modernas y automatizaciones para impulsar tu negocio."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/lunexa-banner.png" />
+    <meta property="og:url" content="https://lunexa.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- 🐦 TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Lunexa | Desarrollo de Software y Soluciones Digitales" />
+    <meta
+      name="twitter:description"
+      content="Desarrollamos sitios web, sistemas y soluciones tecnológicas personalizadas con Django, React y Python."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/lunexa-banner.png" />
+
+    <!-- 📱 ICONOS Y MANIFEST -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+    <!-- 🧭 Robots -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- 🧩 Google Analytics (opcional)
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXX');
+    </script>
     -->
-    <title>Lunexa</title>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesitás habilitar JavaScript para usar esta aplicación.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
