mejoras SEO, sistemap y verificacion de google agregadas 2

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <meta name="twitter:image" content="%PUBLIC_URL%/lunexa-banner.png" />
 
     <!-- 📱 ICONOS Y MANIFEST -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/lunexa-banner.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- 🧭 Robots -->
