mejoras SEO, sistemap y verificacion de google agregadas 3

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
 
     <link rel="icon" href="%PUBLIC_URL%/lunexa.ico" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -46,7 +47,7 @@
     <meta name="twitter:image" content="%PUBLIC_URL%/lunexa-banner.png" />
 
     <!-- 📱 ICONOS Y MANIFEST -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/lunexa-banner.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- 🧭 Robots -->
